<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="249dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:text="@string/bajas"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/personales"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="17dp" />

        <Button
            android:id="@+id/eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="153dp"
            android:layout_marginRight="153dp"
            android:layout_marginBottom="27dp"
            android:text="@string/eliminar" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="86dp"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="38dp"
            android:layout_marginBottom="102dp"
            android:text="@string/escribirid" />

        <EditText
            android:id="@+id/cajaId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView7"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:ems="10"
            android:inputType="textPersonName" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>