<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/cambioPermisos"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listaPersonales"
            android:layout_width="182dp"
            android:layout_height="202dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="97dp" />

        <ListView
            android:id="@+id/listaLaboratorios"
            android:layout_width="189dp"
            android:layout_height="202dp"
            android:layout_alignEnd="@+id/textView10"
            android:layout_alignParentTop="true"
            android:layout_marginTop="97dp"
            android:layout_marginEnd="-47dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView10"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-16dp"
            android:layout_marginBottom="114dp"
            android:text="@string/idPersonal" />

        <EditText
            android:id="@+id/idPersona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="97dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/botonPermiso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-18dp"
            android:layout_marginBottom="35dp"
            android:layout_toEndOf="@+id/textView11"
            android:text="@string/cambiarPermiso" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView11"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="164dp"
            android:text="@string/idLaboratorio" />

        <EditText
            android:id="@+id/idLaboratorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/idPersona"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="154dp"
            android:ems="10"
            android:inputType="textPersonName" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>