<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="66dp"
            android:text="@string/cierre"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listadelaboratorios"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="149dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginBottom="138dp"
            android:text="@string/id_laboratorio" />

        <EditText
            android:id="@+id/cajaIdLaboratorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView9"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="124dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/cierreLaboratorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="86dp"
            android:layout_marginLeft="86dp"
            android:layout_marginBottom="68dp"
            android:text="@string/cierre" />

        <Button
            android:id="@+id/aperturaLaboratorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-53dp"
            android:layout_marginBottom="11dp"
            android:layout_toEndOf="@+id/textView13"
            android:text="@string/apertura" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>